--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               alt="Personagem Ciclope"
             />
           </li>
-          <li class="personagem" id="Jean-Grey" data-name="jean grey"data-description="jean grey é uma mutante nível ômega e o principal avatar da Força Fênix, no qual manifesta poderes cósmicos. A telepatia e telecinese">
+          <li class="personagem" id="jean-grey" data-name="jean grey"data-description="jean grey é uma mutante nível ômega e o principal avatar da Força Fênix, no qual manifesta poderes cósmicos. A telepatia e telecinese">
            <img
               src="./src/imagens/card-jean-grey.jpg"
               alt="Personagem Jean Grey"
@@ -59,7 +59,7 @@
             />
           </li>
 
-          <li class="personagem" id="Wolverine"data-name="Wolverine"data-description="Poderes. Garras Metálicas. Fator de Cura Regenerativo, Super Agilidade." data-text-length="curto">
+          <li class="personagem" id="wolverine"data-name="Wolverine"data-description="Poderes. Garras Metálicas. Fator de Cura Regenerativo, Super Agilidade." data-text-length="curto">
             <img
               src="./src/imagens/card-wolverine.jpg"
               alt="Personagem Wolverine"
